# fastapi-mongodb

./: .env  .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sample/: questions.json
src/: main.py
src/api/: __init__.py  question.py
src/core/: config.py
src/crud/: __init__.py  base.py  question.py
src/schema/: __init__.py  response.py
src/schema/anniversary/: __init__.py  crud.py
src/schema/question/: __init__.py  crud.py
src/schema/question/response_example/: __init__.py  create.py  delete.py  get_by_id.py  get_multi.py  update.py
